# distributed-ecommerce-microservices

./: .env.example  .env.free-deploy  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  AUTH_AND_CRUD_GUIDE.md  CONTRIBUTING.md  CRYPTO_PAYMENTS_QUICKSTART.md  DEPLOY_FREE.md  FIXES_SUMMARY.md  FRONTEND_FEATURES_IMPLEMENTED.md  HOW_TO_SEE_ADD_PRODUCT_BUTTON.md  LICENSE  Makefile  PAYPAL_SETUP.md  PORT_FIX_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_INTRODUCTION.md  QUICKSTART.md  README.md  RESUME_INTRO.md  SETUP_COMPLETE.md  START_HERE.md  STRIPE_SETUP.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WEB3_COMPLETE_STATUS.md  WEB3_IMPLEMENTATION_STEP1.md  WEB3_STEP3_CRYPTO_PAYMENTS.md  WEB3_STEP3_SUMMARY.md  docker-compose.yml  load-test.sh  quick-start.sh  render.yaml  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
init-db/: 01-init.sql
kong/: kong.yml
migrations/: 002_create_payments_table.sql  003_update_payments_for_paypal.sql
monitoring/: prometheus.yml
scripts/: health-check.sh
services/catalog-service/: Dockerfile  package-lock.json  package.json
services/inventory-service/: Dockerfile  go.mod
services/notification-service/: Dockerfile  app.py  requirements.txt
services/order-service/: Dockerfile  go.mod  go.sum
services/payment-service/: Cargo.toml  Dockerfile
services/payment-service/src/: circuit_breaker.rs  config.rs  kafka.rs  main.rs  metrics.rs  models.rs  payment.rs  paypal_handler.rs  redis_client.rs  stripe_handler.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
(+54 files in other folders)
