[package]
name = "payment-service"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1.21"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mockito = "1.2"
